펀드/지수비교

--- a/html/index.html
+++ b/html/index.html
@@ -1165,7 +1165,40 @@
 						<td class="al article"><a href="" class="link inner-arrow">PBWNO010000</a></td>
 					</tr>
 				</tbody>
-
+				<tbody data-folder="PBWCH">
+					<tr>
+						<td>PBWCH</td>
+						<td>펀드/지수비교</td>
+						<td>상세</td>
+						<td></td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWCH000000</a></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td>검색</td>
+						<td></td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWCH009902</a></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>검색결과</td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWCH009902_result</a></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>검색결과없음</td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWCH009902_noresult</a></td>
+					</tr>
+				</tbody>
 			</table>
 		</div>
 
