펀드/지수비교

--- a/html/index.html
+++ b/html/index.html
@@ -1199,6 +1199,24 @@
 						<td class="al article"><a href="" class="link inner-arrow">PBWCH009902_noresult</a></td>
 					</tr>
 				</tbody>
+				<tbody data-folder="PBWAD">
+					<tr>
+						<td>PBWAD</td>
+						<td>관리</td>
+						<td>고객 명함 메모 관리</td>
+						<td></td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWAD000000</a></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td>커뮤니티 관리</td>
+						<td></td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWAD020000</a></td>
+					</tr>
+				</tbody>
 			</table>
 		</div>
 
