전문가/투체어스

--- a/html/PBWIN/PBWIN000000.html
+++ b/html/PBWIN/PBWIN000000.html
@@ -79,7 +79,7 @@
 					<button type="button" class="header-btn" aria-label="뒤로 가기"><i class="i-back"></i></button>
 				</div>
 				<div class="center">
-					<h1>전문가 리포트</h1>
+					<h1>TWO CHARIS</h1>
 				</div>
 				<div class="right">
 					<button type="button" class="header-btn" aria-label="메뉴 열기"><i class="i-menu"></i></button>
@@ -105,56 +105,32 @@
 					</style>
 
 					<!-- content-visual -->
-					<div class="content-visual">
-						<div class="text pl8">
-							<strong class="title-medium px0">매일매일 확인하는 </strong>
-							<h2 class="headline-large px0">전 세계 경제 이슈</h2>
+					<div class="content-visual content-fluid px0 pt0 relative">
+						<div class="text" style="position:absolute;left:24px;top:65px;">
+							<strong class="title-medium px0">우리은행 <span style="color:#08B900;" class="fw-800">VIP</span>고객님을 위한 </strong>
+							<h2 class="headline-large px0">라이프스타일 매거진</h2>
 						</div>
-						<picture>
-							<source srcset="/resources/images/PBWRE/img_visual01.png 2x">
-							<img src="/resources/images/PBWRE/img_visual01.png" alt="">
+						<picture style="flex:1 1 100%;background: linear-gradient(180deg, #FFF 0%, #EAF4FF 100%);display:flex;align-items:flex-end;justify-content:flex-end;">
+							<source srcset="/resources/images/PBWIN/img_visual01.png 2x">
+							<img src="/resources/images/PBWIN/img_visual01.png" alt="" style="height:300px;width:100%;object-fit:contain;">
 						</picture>
 					</div>
 					<!-- //content-visual -->
 
-					<!-- report-list -->
-					<div class="report-list mt24">
-						<ul>
-							<li>
-								<a href="#"><span class="title-medium px0">Daily 모닝브리핑</span></a>
-								<div class="inp inp-toggle inp-toggle-large">
-									<label>
-										<input type="checkbox" aria-label="구독" data-label-checked="구독" data-label="해지" checked>
-									</label>
-								</div>
-							</li>
-							<li>
-								<a href="#"><span class="title-medium px0">Weekly 투자전략</span></a>
-								<div class="inp inp-toggle inp-toggle-large">
-									<label>
-										<input type="checkbox" aria-label="구독" data-label-checked="구독" data-label="해지" checked>
-									</label>
-								</div>
-							</li>
-							<li>
-								<a href="#"><span class="title-medium px0">Monthly View</span></a>
-							</li>
-							<li>
-								<a href="#"><span class="title-medium px0">이슈 리포트</span></a>
-							</li>
-						</ul>
-					</div>
-					<!-- report-list -->
-
-					<div class="mt24">
-						<a href="#" class="banner">
+					<!-- twochars-anchor -->
+					<div class="twochars-anchor mt24">
+						<div class="inp inp-toggle inp-toggle-large">
 							<picture>
-								<source srcset="/resources/images/PBWRE/img_banner01.png">
-								<img src="/resources/images/PBWRE/img_banner01.png" alt="">
+								<source srcset="/resources/images/PBWIN/text_twochairs.svg">
+								<img src="/resources/images/PBWIN/text_twochairs.svg" alt="TWO CHAIRS">
 							</picture>
-						</a>
+							<label>
+								<input type="checkbox" aria-label="구독" data-label-checked="구독" data-label="해지" checked>
+							</label>
+						</div>
+						<a href="#" class="mt24"><span class="title-medium px0">웹진 바로가기</span></a>
 					</div>
-
+					<!-- twochars-anchor -->
 
 				</div>
 				<!-- //content -->
@@ -173,12 +149,6 @@
 
 	</main>
 	<!-- //main -->
-
-
-
-	<script>
-		$swal.fire02('푸시알림이 꺼져 있습니다. <div class="pt5"></div> 휴대폰의 설정 &gt; 알림 &gt; RM/PB WON(가칭)에서 알림을 허용해주세요. ', 'caution', '설정하러 가기', true, '다음에');
-	</script>
 
 </body>
 
