--- a/html/PBWAI/PBWAI000000.html
+++ b/html/PBWAI/PBWAI000000.html
@@ -247,8 +247,8 @@
 											</div>
 											<p class="text">통화스왑업무개시</p>
 											<ul class="file-attach-list">
-												<li><a href="#"><span>불완전 판매사례 안내.hwp</span></a></li>
-												<li><a href="#"><span>불완전 판매사례 안내.hwp</span></a></li>
+												<li><a href="#" class="link"><span>불완전 판매사례 안내.hwp</span></a></li>
+												<li><a href="#" class="link"><span>불완전 판매사례 안내.hwp</span></a></li>
 											</ul>
 										</li>
 										<li>
@@ -259,8 +259,8 @@
 											</div>
 											<p class="text">주택보증공사 임대보증금</p>
 											<ul class="file-attach-list">
-												<li><a href="#"><span>불완전 판매사례 안내.hwp</span></a></li>
-												<li><a href="#"><span>불완전 판매사례 안내.hwp</span></a></li>
+												<li><a href="#" class="link"><span>불완전 판매사례 안내.hwp</span></a></li>
+												<li><a href="#" class="link"><span>불완전 판매사례 안내.hwp</span></a></li>
 											</ul>
 										</li>
 									</ol>
