--- a/html/PBWFU/PBWFU020000.html
+++ b/html/PBWFU/PBWFU020000.html
@@ -105,23 +105,8 @@
 					</style>
 
 					<div class="fund-result">
-
-						<!-- sort-wrap -->
-						<div class="sort-wrap py0 mb24">
-
-							<!-- sort-list -->
-							<button class="sort-list" data-micromodal-trigger="modal-select-filter" aria-label="정렬">
-								<span class="filter">
-									<span class="sort">3개월</span>
-								</span>
-							</button>
-							<!-- sort-list -->
-
-						</div>
-						<!-- sort-wrap -->
-
 						<!-- fund-card-list -->
-						<div class="fund-card-list mt24">
+						<div class="fund-card-list">
 							<div class="fund-card" data-toggle="toggle-wrap" data-aos>
 								<div class="tag-wrap">
 									<div class="tags tags-small tags-lightRed">#매우높은위험</div>
