--- a/html/PBWFU/PBWFU040000.html
+++ b/html/PBWFU/PBWFU040000.html
@@ -181,14 +181,7 @@
 							</div>
 						</div>
 
-						<div class="fund-desc-list mt16">
-							<ul class="dot-list">
-								<li>비예금상품은 원금손실이 발생할 수 있습니다.</li>
-								<li>과거수익률이 미래 수익률을 보장하지 않습니다.</li>
-								<li>투자대상, 투자에 따른 위험, 위험등급, 수수료는 금융소지자보호법 제 19조 제1항에서 규정하고 있는 중요한 사항입니다.</li>
-								<li>텍스트가 들어갑니다.</li>
-							</ul>
-						</div>
+						<p class="description info body-small fc-typography-caption mt16">투자대상, 투자에 따른 위험, 위험등급, 수수료는 「금융소비자보호법」 제19조 제1항에서 규정하고 있는 중요한 사항입니다.</p>
 
 						<div class="fund-detail-info content-fluid mt40">
 							<h4 class="headline-small">상품 특징</h4>
@@ -201,6 +194,7 @@
 							<h4 class="headline-small">자산구성</h4>
 							<div style="height:250px;">
 								<div id="chart1" data-aos data-aos-id="chart1"></div>
+
 							</div>
 							<div class="group pb8">
 								<div class="right">
@@ -211,6 +205,16 @@
 									</span>
 								</div>
 							</div>
+							<ul>
+								<li class="fc-blue-500">1. 국내주식 : #2589F4
+								<li>
+								<li class="fc-deepblue-700">2. 해외주식 : #1641D0</li>
+								<li class="fc-pink-400">3. 국내채권 : #F35E9C</li>
+								<li class="fc-purple-500">4. 해외채권 : #B348E5</li>
+								<li class="fc-violet-400">5. 펀드 : #7163EE</li>
+								<li class="fc-cyan-500">6. 유동성 : #1AA3C1</li>
+								<li class="fc-green-700">7. 기타 : #048B65</li>
+							</ul>
 						</div>
 
 						<div class="stroke stroke4 stroke-fluid"></div>
@@ -317,11 +321,6 @@
 								</div>
 							</div>
 
-							<ul class="dot-list p0 mt24">
-								<li>재간접형펀드, 모자형 펀드는 피투자펀드보수가 추가 발생하므로, 상품별 투자설명서를 확인하시기 바랍니다.</li>
-								<li>재간접형펀드, 모자형 펀드는 피투자펀드보수가 추가 발생하므로, 상품별 투자설명서를 확인하시기 바랍니다.</li>
-								<li>재간접형펀드, 모자형 펀드는 피투자펀드보수가 추가 발생하므로, 상품별 투자설명서를 확인하시기 바랍니다.</li>
-							</ul>
 						</div>
 
 						<div class="stroke stroke4 stroke-fluid"></div>
@@ -366,6 +365,24 @@
 
 						</div>
 
+						<div class="stroke stroke4 stroke-fluid"></div>
+
+						<div class="fund-detail-info content-fluid">
+							<h4 class="headline-small">유의사항</h4>
+
+							<ul class="dot-list p0 fc-typography-cpation">
+								<li>비예금상품은 원금손실이 발생할 수 있습니다.</li>
+								<li>과거수익률이 미래수익률을 보장하지 않습니다.</li>
+								<li>투자대상, 투자에 따른 위험, 위험등급, 수수료는 「금융소비자보호법」 제19조 제1항에서 규정하고 있는 중요한 사항입니다.</li>
+								<li>최근에 설정(운용 시작)되어 설정기간이 짧은 펀드는 기간별 수익률이 존재하지 않을 수 있습니다.</li>
+								<li>BM(벤치마크)은 제로인이 부여한 BM으로 투자설명서의 BM 또는 비교지수와 다를 수 있습니다.</li>
+								<li>제로인에서 제공하는 데이터 및 분석자료는 단순 정보제공을 목적으로 하며, 특정 펀드에 대한 투자를 권고하거나 거래를 목적으로 하지 않습니다.</li>
+								<li>제로인에서 제공하는 데이터 및 분석자료는 무단으로 배포하거나 재활용 할 수 없습니다.</li>
+							</ul>
+						</div>
+
+
+
 					</div>
 					<!-- //fund-detail -->
 
@@ -405,66 +422,41 @@
 
 						<strong class="title-large py16 px24">3개월</strong>
 
-						<div class="table-col">
-							<table>
+						<div class="table-col content-fluid overflow-visible px0">
+							<table class="column01-sticky">
 								<caption>기간별 기준가/수익률 3개월</caption>
 								<colgroup>
-									<col style="width:30%">
-									<col style="width:30%">
-									<col style="">
+									<col style="width:15%">
+									<col>
+									<col>
+									<col>
 								</colgroup>
 								<thead>
 									<tr>
 										<th scope="col">기준일</th>
-										<th scope="col">기준가</th>
-										<th scope="col">수익률</th>
+										<th scope="col">신한글로벌탄소중립솔루션증권투자신탁(H)주식</th>
+										<th scope="col">BM</th>
+										<th scope="col">신한글로벌탄소중립솔루션증권투자신탁(H)주식</th>
 									</tr>
 								</thead>
 								<tbody>
 									<tr>
 										<td>2024-11-15</td>
-										<td>text</td>
-										<td>-14.08%</td>
+										<td>8.888 <br> <span class="fc-deepblue-600">-11.93%</span></td>
+										<td><span class="fc-red-600">5.72%</span></td>
+										<td><span class="fc-red-600">+5.72%</span></td>
 									</tr>
 									<tr>
 										<td>2024-11-15</td>
-										<td>text</td>
-										<td>-14.08%</td>
+										<td>8.888 <br> <span class="fc-deepblue-600">-11.93%</span></td>
+										<td><span class="fc-red-600">5.72%</span></td>
+										<td><span class="fc-deepblue-600">-5.72%</span></td>
 									</tr>
 									<tr>
 										<td>2024-11-15</td>
-										<td>text</td>
-										<td>-14.08%</td>
-									</tr>
-									<tr>
-										<td>2024-11-15</td>
-										<td>text</td>
-										<td>-14.08%</td>
-									</tr>
-									<tr>
-										<td>2024-11-15</td>
-										<td>text</td>
-										<td>-14.08%</td>
-									</tr>
-									<tr>
-										<td>2024-11-15</td>
-										<td>text</td>
-										<td>-14.08%</td>
-									</tr>
-									<tr>
-										<td>2024-11-15</td>
-										<td>text</td>
-										<td>-14.08%</td>
-									</tr>
-									<tr>
-										<td>2024-11-15</td>
-										<td>text</td>
-										<td>-14.08%</td>
-									</tr>
-									<tr>
-										<td>2024-11-15</td>
-										<td>text</td>
-										<td>-14.08%</td>
+										<td>8.888 <br> <span class="fc-deepblue-600">-11.93%</span></td>
+										<td><span class="fc-red-600">5.72%</span></td>
+										<td><span class="">0.00%</span></td>
 									</tr>
 								</tbody>
 
@@ -615,11 +607,10 @@
 				<div class="modal__content">
 					<div class="content content-fluid">
 
-						<strong class="title-large py16 px24">원금손실위험</strong>
 
 						<div class="table-col content-fluid overflow-visible px0 scroll-end">
 							<table class="column01-sticky">
-								<caption>원금손실위험</caption>
+								<caption>클래스 비교</caption>
 								<colgroup>
 									<col style="">
 									<col style="">
