--- a/html/PBWFU/PBWFU050000.html
+++ b/html/PBWFU/PBWFU050000.html
@@ -148,8 +148,6 @@
 										<div class="comment-user-info">
 											<div class="divide-list">
 												<span>서울디지털프리미엄금융센터</span>
-												<div class="division h14 mx8"></div>
-												<span>개인금융1팀</span>
 											</div>
 											<span class="date">2024-12-17 16:33:51</span>
 											<button type="button" class="btn-more" data-micromodal-trigger="modal-dropdown-list" aria-label="수정 및 삭제"></button>
@@ -192,8 +190,6 @@
 											<div class="comment-user-info">
 												<div class="divide-list">
 													<span>서울디지털프리미엄금융센터</span>
-													<div class="division h14 mx8"></div>
-													<span>개인금융1팀</span>
 												</div>
 												<span class="date">2024-12-17 16:33:51</span>
 												<button type="button" class="btn-more" data-micromodal-trigger="modal-dropdown-list" aria-label="수정 및 삭제"></button>
@@ -236,8 +232,6 @@
 											<div class="comment-user-info">
 												<div class="divide-list">
 													<span>서울디지털프리미엄금융센터</span>
-													<div class="division h14 mx8"></div>
-													<span>개인금융1팀</span>
 												</div>
 												<span class="date">2024-12-17 16:33:51</span>
 												<button type="button" class="btn-more" data-micromodal-trigger="modal-dropdown-list" aria-label="수정 및 삭제"></button>
@@ -284,8 +278,6 @@
 									<div class="comment-user-info">
 										<div class="divide-list">
 											<span>서울디지털프리미엄금융센터</span>
-											<div class="division h14 mx8"></div>
-											<span>개인금융1팀</span>
 										</div>
 										<span class="date">2024-12-17 16:33:51</span>
 										<button type="button" class="btn-more" data-micromodal-trigger="modal-dropdown-list" aria-label="수정 및 삭제"></button>
@@ -320,18 +312,18 @@
 
 								<!-- comment-wrap -->
 								<div class="comment-wrap">
-									<div class="comment-user-profile">
-										<div class="avartar avartar01"></div>
-										<strong class="name">나우리</strong>
-									</div>
-									<div class="comment-user-info">
-										<div class="divide-list">
-											<span>서울디지털프리미엄금융센터</span>
-											<div class="division h14 mx8"></div>
-											<span>개인금융1팀</span>
+									<div class="comment-user">
+										<div class="comment-user-profile">
+											<div class="avartar avartar01"></div>
+											<strong class="name">나우리</strong>
 										</div>
-										<span class="date">2024-12-17 16:33:51</span>
-										<button type="button" class="btn-more" data-micromodal-trigger="modal-dropdown-list" aria-label="수정 및 삭제"></button>
+										<div class="comment-user-info">
+											<div class="divide-list">
+												<span>서울디지털프리미엄금융센터</span>
+											</div>
+											<span class="date">2024-12-17 16:33:51</span>
+											<button type="button" class="btn-more" data-micromodal-trigger="modal-dropdown-list" aria-label="수정 및 삭제"></button>
+										</div>
 									</div>
 									<div class="comment-desc" data-toggle="toggle-wrap">
 										<div class="comment-desc-inner">
@@ -353,7 +345,7 @@
 												120
 											</button>
 										</div>
-										<div class="right"><button type="button" class="btn-noborder"><i class="ico-reply"></i>답글</button></div>
+										<div class="right"><button type="button" class="btn-noborder" data-micromodal-trigger="modal-reply-write"><i class="ico-reply"></i>답글</button></div>
 									</div>
 								</div>
 								<!-- comment-wrap -->
