--- a/html/PBWFU/PBWFU060000.html
+++ b/html/PBWFU/PBWFU060000.html
@@ -142,11 +142,11 @@
 											<tr>
 												<th scope="col">
 													<span class="blind">신한글로벌탄소중립솔루션증권투자신탁(H)(주식)</span>
-													<strong>상품개요</strong>
+													<strong>상품특징</strong>
 												</th>
 												<th scope="col">
 													<span class="blind">피델리티글로벌대당인컴증권자투자신탁(주식-재간접형)</span>
-													<strong>상품개요</strong>
+													<strong>상품특징</strong>
 												</th>
 											</tr>
 											<tr>
@@ -501,6 +501,9 @@
 										</tbody>
 									</table>
 								</div>
+								<div class="btn-wrap py0 mt24">
+									<button type="button" class="btn-xsmall btn-outlined btn-round" data-micromodal-trigger="modal-diff02">자산구성 비교</button>
+								</div>
 
 							</div>
 
@@ -805,7 +808,134 @@
 						</div>
 						<!-- //tab-content -->
 
-						<div id="chart2" data-aos data-aos-id="chart2" class="mt24 bg-background-bg_lightGray"></div>
+						<div class="chart-wrap mt24">
+							<div id="chart2" data-aos data-aos-id="chart2"></div>
+							<div class="group pb16 px24">
+								<div class="right">
+									<span class="divide-list">
+										<span class="fs-14">2024-11-13 기준</span>
+										<span class="division h14 mx8"></span>
+										<span class="fs-14">자료제공: 제로인</span>
+									</span>
+								</div>
+							</div>
+						</div>
+
+						<!-- tab-content -->
+						<div class="tab-content">
+							<ul class="tab-list tab-col overflow-list" role="tablist">
+								<li class="tab tab-active"><a role="tab" href="#">수익률</a></li>
+								<li class="tab"><a role="tab" href="#">기준가</a></li>
+							</ul>
+						</div>
+						<!-- //tab-content -->
+
+						<div class="table-col mt24">
+							<table>
+								<colgroup>
+									<col style="width:35%;">
+									<col>
+									<col>
+								</colgroup>
+								<thead>
+									<tr>
+										<th scope="col" class="fs-15 fc-typography-caption ar vt">기준일</th>
+										<th scope="col" class="fs-15 fc-typography-caption ar vt">신한글로벌탄소중립솔루션증권투자신탁(H)(주식)</th>
+										<th scope="col" class="fs-15 fc-typography-caption ar vt">피델리티글로벌대당인컴증권자투자신탁(주식-재간접형)</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+										<th scope="row" class="ac">2025-01-10</th>
+										<td class="ar fc-red-600">+14.082%</td>
+										<td class="ar fc-red-600">+14.082%</td>
+									</tr>
+									<tr>
+										<th scope="row" class="ac">2025-01-10</th>
+										<td class="ar fc-deepblue-600">-10.762%</td>
+										<td class="ar fc-deepblue-600">-10.762%</td>
+									</tr>
+									<tr>
+										<th scope="row" class="ac">2025-01-10</th>
+										<td class="ar">0.00%</td>
+										<td class="ar">0.00%</td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
+
+						<!-- tab-content -->
+						<div class="tab-content">
+							<ul class="tab-list tab-col overflow-list" role="tablist">
+								<li class="tab"><a role="tab" href="#">수익률</a></li>
+								<li class="tab tab-active"><a role="tab" href="#">기준가</a></li>
+							</ul>
+						</div>
+						<!-- //tab-content -->
+
+						<div class="table-col mt24">
+							<table>
+								<colgroup>
+									<col style="width:35%;">
+									<col>
+									<col>
+								</colgroup>
+								<thead>
+									<tr>
+										<th scope="col" class="fs-15 fc-typography-caption ar vt">기준일</th>
+										<th scope="col" class="fs-15 fc-typography-caption ar vt">신한글로벌탄소중립솔루션증권투자신탁(H)(주식)</th>
+										<th scope="col" class="fs-15 fc-typography-caption ar vt">피델리티글로벌대당인컴증권자투자신탁(주식-재간접형)</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+										<th scope="row" class="ac">2025-01-10</th>
+										<td class="ar">88,888</td>
+										<td class="ar">88,888</td>
+									</tr>
+									<tr>
+										<th scope="row" class="ac">2025-01-10</th>
+										<td class="ar">88,888</td>
+										<td class="ar">88,888</td>
+									</tr>
+									<tr>
+										<th scope="row" class="ac">2025-01-10</th>
+										<td class="ar">88,888</td>
+										<td class="ar">88,888</td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
+
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- //micromodal -->
+
+
+	<!-- micromodal -->
+	<div class="micromodal-slide micromodal-slide-bottom micromodal-slide-bottom-full modal" id="modal-diff02">
+		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
+			<div class="modal__container" role="dialog" aria-modal="true">
+				<div class="modal__header">
+					<strong class="modal__title title-large">자산구성 비교</strong>
+					<button type="button" class="modal__close" aria-label="팝업 닫기" data-micromodal-close></button>
+				</div>
+				<div class="modal__content">
+					<div class="content">
+
+						<div class="chart-wrap mt16">
+							<div id="chart3" data-aos data-aos-id="chart3"></div>
+							<div class="group pb16 px24">
+								<div class="right">
+									<span class="divide-list">
+										<span class="fs-14">자료제공: 제로인</span>
+									</span>
+								</div>
+							</div>
+						</div>
 
 						<div class="table-col mt24">
 							<table>
@@ -861,15 +991,16 @@
 							</table>
 						</div>
 
-						<span class="divide-list mt16">
-							<span class="fs-14">2024-11-13 기준</span>
-							<span class="division h14 mx8"></span>
-							<span class="fs-14">자료제공: 제로인</span>
-						</span>
+						<!-- division-center -->
+						<div class="division-center">
 
-						<div class="btn-wrap py0 mt24">
-							<button type="button" class="btn-xsmall btn-outlined btn-round">수익률 추이</button>
+							<div class="no-result">
+								<i class="icon-only icon-48 icon-noresult bg-icon-gray_1"></i>
+								<p class="body-medium fw-400">자산구성 비교정보가 존재하지 않습니다.</p>
+							</div>
+
 						</div>
+						<!-- //division-center -->
 
 					</div>
 				</div>
@@ -933,17 +1064,62 @@
 			chart2.render();
 		});
 	</script>
-	<style>
-		.apexcharts-legend-marker {
-			border-radius: 4px !important;
-		}
+	<script>
+		var options3 = {
+			series: [{
+					name: "신한글로벌탄소중립솔루션증권투자신탁(H)(주식)",
+					data: [10, 41, 35, 51, 49, 62, 69, 91, 148],
 
-		#chart2 .apexcharts-legend.apx-legend-position-bottom.apexcharts-align-center,
-		#chart2 .apexcharts-legend.apx-legend-position-top.apexcharts-align-center {
-			justify-content: flex-start;
-			flex-direction: column;
-		}
-	</style>
+				},
+				{
+					name: "BM",
+					data: [1, 32, 26, 42, 40, 53, 60, 82, 18]
+				},
+				{
+					name: "유형평균",
+					data: [100, 320, 260, 420, 400, 530, 600, 820, 180]
+				}
+			],
+			chart: {
+				height: 180,
+				type: 'line',
+				zoom: {
+					enabled: false
+				},
+				toolbar: {
+					show: false,
+				}
+			},
+			colors: ['#7163EE', '#F35E9C', '#1AA3C1'],
+			dataLabels: {
+				enabled: false
+			},
+			stroke: {
+				curve: 'smooth',
+				width: [2, 2]
+			},
+			markers: {
+				size: 4,
+			},
+			grid: {
+				row: {
+					// colors: ['#E9ECEF', 'transparent'], // takes an array which will be repeated on columns
+					// opacity: 0.5
+				},
+			},
+			xaxis: {
+				categories: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep'],
+			}
+		};
+
+		var chart3 = new ApexCharts(document.querySelector("#chart3"), options3);
+
+		document.addEventListener('aos:in:chart3', ({
+			detail
+		}) => {
+			chart3.render();
+		});
+	</script>
 </body>
 
 </html>
