--- a/html/PBWFU/PBWFU070000.html
+++ b/html/PBWFU/PBWFU070000.html
@@ -103,7 +103,7 @@
 						}
 					</style>
 
-					<p class="description info body-small fc-typography-caption mt16">관심펀드는 최대 10개까지 등록할 수 있습니다. <br> 상위 5개의 펀드를 메인에서 비교 분석해 줍니다.</p>
+					<p class="description info body-small fc-typography-caption mt16">관심펀드는 최대 10개까지 등록할 수 있습니다. <br> 상위 3개의 펀드는 메인&gt;펀드 탭에서 수익율 비교 차트로 조회할 수 있습니다.</p>
 
 					<div class="group content-fluid">
 						<div class="right">
@@ -152,10 +152,6 @@
 										<dd>-888.88%</dd>
 									</div>
 								</dl>
-								<dl class="expect-reason">
-									<dt>추천사유</dt>
-									<dd>텍스트가 들어갑니다 텍스트가 들어갑니다 텍스트가 들어갑니다 텍스트가 들어갑니다</dd>
-								</dl>
 								<div class="compare-btn-wrap">
 									<button type="button" class="btn-small btn-secondary btn-round" data-toggle="toggle-trigger" data-switch-before="btn-secondary" data-switch-after="btn-primary">
 										비교담기
@@ -199,10 +195,6 @@
 										<dt>12개월</dt>
 										<dd>-888.88%</dd>
 									</div>
-								</dl>
-								<dl class="expect-reason">
-									<dt>추천사유</dt>
-									<dd>텍스트가 들어갑니다 텍스트가 들어갑니다 텍스트가 들어갑니다 텍스트가 들어갑니다</dd>
 								</dl>
 								<div class="compare-btn-wrap">
 									<button type="button" class="btn-small btn-secondary btn-round" data-toggle="toggle-trigger" data-switch-before="btn-secondary" data-switch-after="btn-primary">
@@ -269,7 +261,7 @@
 				<div class="modal__content">
 
 					<div class="content px24">
-						<p class="description info body-large my24">순서를 바꿀 펀드를 끌어 순서를 변경하세요. 상위 3개의 펀드는 메인>펀드 탭에서 수익률 비교 차트로 조회할 수 있습니다.</p>
+						<p class="description info body-large my24">순서를 바꿀 펀드를 끌어 순서를 변경하세요. <br> 상위 3개의 펀드는 메인&gt;펀드 탭에서 수익율 비교 차트로 조회할 수 있습니다.</p>
 
 						<div id="sortingBusinessCard" class="businesscard-list">
 							<div class="list-group-item">
