--- a/html/PBWLO/PBWLO050000.html
+++ b/html/PBWLO/PBWLO050000.html
@@ -71,113 +71,63 @@
 	<!-- main -->
 	<main>
 
-		<!-- header -->
-		<header>
-			<div class="main-header">
-				<div class="left">
-					<button type="button" class="header-logo-btn"><i></i>PB WON</button>
-				</div>
-				<div class="center">
-					<h1><span class="blind">알림</span></h1>
-				</div>
-				<div class="right">
-					<button type="button" class="header-btn" aria-label="메뉴 열기"><i class="i-menu"></i></button>
-				</div>
-			</div>
-		</header>
-		<!-- //header -->
-
 		<!-- main-inner -->
 		<!-- content start -->
 		<div class="main-inner">
 
 			<!-- container -->
 			<div id="container">
+
 				<!-- content -->
 				<div class="content">
 
-					<p class="description info body-small fc-typography-caption mt16">알림의 조회 기간은 14일입니다.</p>
+					<!-- division-center -->
+					<div class="division-center">
 
-					<div class="alarm-list mt16">
-						<ul>
-							<li class="unread">
-								<a href="#" aria-label="읽지 않음">
-									<strong>제목이 노출됩니다.</strong>
-									<div class="text">이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다</div>
-									<div class="date">2024-11-06 10:48</div>
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<strong>제목이 노출됩니다.</strong>
-									<div class="text">이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다</div>
-									<div class="date">2024-11-06 10:48</div>
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<strong>제목이 노출됩니다.제목이 노출됩니다.제목이 노출됩니다.제목이 노출됩니다.제목이 노출됩니다.</strong>
-									<div class="text">이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다</div>
-									<div class="date">2024-11-06 10:48</div>
-								</a>
-							</li>
-						</ul>
+						<div class="login login-bio">
+
+							<picture>
+								<source srcset="/resources/@temp/thumb_w.png">
+								<img src="/resources/@temp/thumb_w.png" alt="">
+							</picture>
+
+							<!-- tab-content -->
+							<p class="title-large my24 ac">로그아웃 되었습니다.</p>
+
+							<div class="btn-wrap my24">
+								<button type="button" class="btn-large btn-primary"><i class="ico-login02"></i>재로그인</button>
+							</div>
+
+							<div class="btn-wrap py0">
+								<button type="button" class="btn-xsmall btn-outlined btn-round">RM 로그인</button>
+							</div>
+
+
+						</div>
 					</div>
+					<!-- //division-center -->
+
 
 				</div>
 				<!-- //content -->
+
 			</div>
 			<!-- //container -->
+
 
 
 		</div>
 		<!-- //content end -->
 		<!-- //main-inner -->
 
-		<!-- bottom-btn -->
-		<div class="bottom-btn">
 
-			<div class="main-nav">
-				<ul>
-					<li class="list01">
-						<a href="#">
-							<div class="icon"><i class="icon-only icon-32 icon-nav01 bg-icon-gray_1"></i></div>
-							<strong>펀드</strong>
-						</a>
-					</li>
-					<li class="list02">
-						<a href="#">
-							<div class="icon"><i class="icon-only icon-32 icon-nav02 bg-icon-gray_1"></i></div>
-							<strong>투자정보</strong>
-						</a>
-					</li>
-					<li class="list03">
-						<a href="#">
-							<div class="icon"><i class="icon-only icon-32 icon-nav03 bg-icon-gray_1"></i></div>
-							<strong>홈</strong>
-						</a>
-					</li>
-					<li class="list04">
-						<a href="#">
-							<div class="icon"><i class="icon-only icon-32 icon-nav04 bg-icon-gray_1"></i></div>
-							<strong>금융+</strong>
-						</a>
-					</li>
-					<li class="list05 is-current not-read" aria-label="알림 있음">
-						<a href="#" aria-current="page">
-							<div class="icon"><i class="icon-only icon-32 icon-nav05 bg-icon-gray_1"></i></div>
-							<strong>알림</strong>
-						</a>
-					</li>
-				</ul>
-			</div>
-
-		</div>
-		<!-- //bottom-btn -->
 
 	</main>
 	<!-- //main -->
 
+	<script>
+
+	</script>
 </body>
 
 </html>
