--- a/html/index.html
+++ b/html/index.html
@@ -696,12 +696,19 @@
 					<tr>
 						<td></td>
 						<td></td>
+						<td></td>
+						<td>재로그인</td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWLO050000</a></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
 						<td>Alert 창 모음</td>
 						<td></td>
 						<td></td>
 						<td class="al article"><a href="" class="link inner-arrow">PBWLO_alert</a></td>
 					</tr>
-
 				</tbody>
 				<tbody data-folder="PBWFU">
 					<tr>
