--- a/html/PBWBU/PBWBU020001.html
+++ b/html/PBWBU/PBWBU020001.html
@@ -177,6 +177,9 @@
 					<!-- memo-list -->
 					<div class="memo-list mt8">
 						<div class="memo-inner" data-toggle="toggle-wrap">
+							<div class="tag-wrap mb12">
+								<div class="tags tags-small tags-white tags-round">나만보기</div>
+							</div>
 							<p>이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다</p>
 							<div class="memo-btn">
 								<div class="left">
