--- a/html/PBWBU/PBWBU020001_memo.html
+++ b/html/PBWBU/PBWBU020001_memo.html
@@ -113,6 +113,9 @@
 					<!-- memo-list -->
 					<div class="memo-list">
 						<div class="memo-inner is-toggled">
+							<div class="tag-wrap mb12">
+								<div class="tags tags-small tags-white tags-round">나만보기</div>
+							</div>
 							<p>이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다</p>
 							<div class="memo-btn">
 								<div class="right">
