--- a/html/PBWMA/PBWMA000000.html
+++ b/html/PBWMA/PBWMA000000.html
@@ -371,7 +371,7 @@
 									<a href="#">
 										<picture>
 											<source srcset="/resources/images/PBWMA/img_banner01.png">
-											<img src="/resources/images/PBWMA/img_banner01.png" alt="">
+											<img src="/resources/images/PBWMA/img_banner02.png" alt="">
 										</picture>
 									</a>
 								</div>
@@ -438,7 +438,7 @@
 							<strong>금융+</strong>
 						</a>
 					</li>
-					<li class="list05">
+					<li class="list05 not-read" aria-label="알림 있음">
 						<a href="#">
 							<div class="icon"><i class="icon-only icon-32 icon-nav05 bg-icon-gray_1"></i></div>
 							<strong>알림</strong>
