--- a/html/PBWBU/PBWBU020001.html
+++ b/html/PBWBU/PBWBU020001.html
@@ -585,7 +585,7 @@
 	<!-- //micromodal -->
 
 
-	<script type="text/javascript">
+	<script>
 		var pz = '';
 		let myElement = document.querySelector('.pinch-zoom');
 		var pzInit = false;
