--- a/html/PBWCL/PBWCL000000.html
+++ b/html/PBWCL/PBWCL000000.html
@@ -106,7 +106,7 @@
 						<div class="group-content">
 							<div class="form">
 								<div class="input-wrap input-btn">
-									<input type="button" aria-label="통합고객번호" placeholder="" data-micromodal-trigger="modal-number-search">
+									<input type="button" aria-label="통합고객번호" data-micromodal-trigger="modal-number-search">
 									<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 									<button type="button" class="input-search" data-micromodal-trigger="modal-number-search" aria-label="입력 내용 검색"></button>
 								</div>
@@ -245,7 +245,7 @@
 							<!-- customer-card-list -->
 							<div class="customer-card-list">
 								<strong class="search-result">검색결과</strong>
-								<button type="button" class="customer-card">
+								<a href="#" class="customer-card">
 									<strong class="title-medium">홍길동</strong>
 									<dl class="group">
 										<dt>실명번호</dt>
@@ -267,9 +267,9 @@
 										<dt>잠재고객여부</dt>
 										<dd>Y</dd>
 									</dl>
-								</button>
+								</a>
 
-								<button type="button" class="customer-card" data-micromodal-close>
+								<a href="#" class="customer-card" data-micromodal-close>
 									<strong class="title-medium">홍길동</strong>
 									<dl class="group">
 										<dt>실명번호</dt>
@@ -291,7 +291,7 @@
 										<dt>잠재고객여부</dt>
 										<dd>Y</dd>
 									</dl>
-								</button>
+								</a>
 							</div>
 							<!-- //customer-card-list -->
 
