--- a/html/PBWCL/PBWCL020000.html
+++ b/html/PBWCL/PBWCL020000.html
@@ -250,28 +250,28 @@
 									<tbody>
 										<tr>
 											<th scope="row" class="al">레이블</th>
-											<td clas="ar">0</td>
-											<td clas="ar">0</td>
+											<td class="ar">0</td>
+											<td class="ar">0</td>
 										</tr>
 										<tr>
 											<th scope="row" class="al">신탁부문계</th>
-											<td clas="ar">0</td>
-											<td clas="ar">0</td>
+											<td class="ar">0</td>
+											<td class="ar">0</td>
 										</tr>
 										<tr>
 											<th scope="row" class="al">외환부문계</th>
-											<td clas="ar">0</td>
-											<td clas="ar">0</td>
+											<td class="ar">0</td>
+											<td class="ar">0</td>
 										</tr>
 										<tr>
 											<th scope="row" class="al">카드부문계</th>
-											<td clas="ar">0</td>
-											<td clas="ar">0</td>
+											<td class="ar">0</td>
+											<td class="ar">0</td>
 										</tr>
 										<tr>
 											<th scope="row" class="al">총합계</th>
-											<td clas="ar">0</td>
-											<td clas="ar">0</td>
+											<td class="ar">0</td>
+											<td class="ar">0</td>
 										</tr>
 									</tbody>
 								</table>
@@ -297,28 +297,28 @@
 									<tbody>
 										<tr>
 											<th scope="row" class="al">레이블</th>
-											<td clas="ar">0</td>
-											<td clas="ar">0</td>
+											<td class="ar">0</td>
+											<td class="ar">0</td>
 										</tr>
 										<tr>
 											<th scope="row" class="al">신탁부문계</th>
-											<td clas="ar">0</td>
-											<td clas="ar">0</td>
+											<td class="ar">0</td>
+											<td class="ar">0</td>
 										</tr>
 										<tr>
 											<th scope="row" class="al">외환부문계</th>
-											<td clas="ar">0</td>
-											<td clas="ar">0</td>
+											<td class="ar">0</td>
+											<td class="ar">0</td>
 										</tr>
 										<tr>
 											<th scope="row" class="al">카드부문계</th>
-											<td clas="ar">0</td>
-											<td clas="ar">0</td>
+											<td class="ar">0</td>
+											<td class="ar">0</td>
 										</tr>
 										<tr>
 											<th scope="row" class="al">총합계</th>
-											<td clas="ar">0</td>
-											<td clas="ar">0</td>
+											<td class="ar">0</td>
+											<td class="ar">0</td>
 										</tr>
 									</tbody>
 								</table>
