--- a/html/PBWCL/PBWCL060000.html
+++ b/html/PBWCL/PBWCL060000.html
@@ -108,7 +108,7 @@
 					<div class="customer-card-list mt40">
 						<strong class="search-result">검색결과</strong>
 
-						<button type="button" class="customer-card">
+						<a href="#" class="customer-card">
 							<strong class="anchor chevron anchor-fluid title-medium p0 fc-typography-title fw-700">삼성중공업</strong>
 							<div class="info-detail-list p0 bg-white-100">
 								<div class="info-table">
@@ -136,9 +136,9 @@
 									</div>
 								</div>
 							</div>
-						</button>
+						</a>
 
-						<button type="button" class="customer-card">
+						<a href="#" class="customer-card">
 							<strong class="anchor chevron anchor-fluid title-medium p0 fc-typography-title fw-700">삼성중공업</strong>
 							<div class="info-detail-list p0 bg-white-100">
 								<div class="info-table">
@@ -166,7 +166,7 @@
 									</div>
 								</div>
 							</div>
-						</button>
+						</a>
 
 					</div>
 					<!-- //customer-card-list -->
