--- a/html/PBWFI/PBWFI040000.html
+++ b/html/PBWFI/PBWFI040000.html
@@ -149,7 +149,7 @@
 						<div class="form-exchange bg-surface-surface50">
 							<div class="label">환율우대율<i class="icon-only icon-24 icon-percent bg-icon-default"></i></div>
 							<div class="ex-input-wrap d-flex">
-								<button type="button" class="anchor chevron anchor-fluid" aria-placeholder="없음" data-micromodal-trigger="modal-alert1"></button>
+								<button type="button" class="anchor chevron anchor-fluid" data-placeholder="없음" data-micromodal-trigger="modal-alert1"></button>
 							</div>
 						</div>
 					</div>
