--- a/html/PBWFU/PBWFU000000.html
+++ b/html/PBWFU/PBWFU000000.html
@@ -40,9 +40,9 @@
 	<!-- jquery-ui-monthpicker-master -->
 	<script src="/resources/plugins/jquery-ui-monthpicker-master/monthpicker.js"></script>
 	<!-- jquery-touchSwipe -->
-	<script src="/resources/plugins/jquery.touchswipe/1.6.19/jquery.touchSwipe.min.js"></script><!-- //[plugins] -->
+	<script src="/resources/plugins/jquery.touchswipe/1.6.19/jquery.touchSwipe.min.js"></script>
+	<!-- //[plugins] -->
 
-	<!-- ui source -->
 	<link rel="stylesheet" href="/resources/css/ui-fonts.css">
 	<link rel="stylesheet" href="/resources/css/ui-variable.css">
 	<link rel="stylesheet" href="/resources/css/ui-default.css">
@@ -225,7 +225,7 @@
 											<source srcset="/resources/images/PBWFU/ico-fig-list02.svg">
 											<img src="/resources/images/PBWFU/ico-fig-list02.svg" alt="">
 										</picture>
-										<figcaption>수익률 Best</figcaption>
+										<figcaption>수익률 BEST</figcaption>
 									</figure>
 								</a>
 							</li>
@@ -236,7 +236,7 @@
 											<source srcset="/resources/images/PBWFU/ico-fig-list03.svg">
 											<img src="/resources/images/PBWFU/ico-fig-list03.svg" alt="">
 										</picture>
-										<figcaption>판매 Best</figcaption>
+										<figcaption>판매 BEST</figcaption>
 									</figure>
 								</a>
 							</li>
