--- a/html/PBWBU/PBWBU020001.html
+++ b/html/PBWBU/PBWBU020001.html
@@ -302,6 +302,8 @@
 					</div>
 					<!-- //info-detail-list -->
 
+					<p class="description error body-small fc-typography-caption my40">등록된 고객명함은 현재 소속 지점으로 등록되어 지점 이동 후에는 조회하실 수 없습니다. <br> 개인정보 또는 부적절한 내용 작성을 금지하며, 마케팅 정보로 이용할 수 없습니다.</p>
+
 					<!-- btn-wrap -->
 					<div class="btn-wrap">
 						<button type="button" class="btn-large btn-outlined">삭제</button>
